[package]
name = "silent-crawler"
version = "0.1.0"
edition = "2021"
authors = ["ColdCodeEmy <official.olaemy@gmail.com> "]
description = "A fast web crawler written in Rust"
readme = "README.md"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["gzip"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"


[[bin]]
name = "silent-crawler"
path = "src/main.rs"